src/components/PageComponents/Home/home.module.css
/* ... */
/*
@media screen and (max-width: 736px) and (orientation: landscape) {
  .Banner {
    height: 25em;
  }


.inner2 {
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  -moz-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center;
  margin: 0 auto;
  width: 100%;
  flex-direction: column;
}
}

@media screen and (max-width: 736px) and (orientation: portrait) {
  .Banner {
    height: 30em;
  }


.inner2 {
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  -moz-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center;
  margin: 0 auto;
  width: 100%;
  flex-direction: column;
}
}
*/
@media screen and (max-width: 736px) {

  .mywrapper {
    padding: 2.5em 2em 0.5em 2em ;
  }


  .content {
    padding: 2.5em 2em 0.5em 2em;
  }


.inner2 {
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  -moz-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center;
  margin: 0 auto;
  width: 70em;
  flex-direction: column;
}
}

@media screen and (max-width: 480px) {
  .Banner {
    /*background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, rgba(39, 161, 227, 0.65), rgba(231, 35, 42, 0.65)), url("../../images/banner.jpg");
      background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, rgba(39, 161, 227, 0.65), rgba(231, 35, 42, 0.65)), url("../../images/banner.jpg");
      background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, rgba(39, 161, 227, 0.65), rgba(231, 35, 42, 0.65)), url("../../images/banner.jpg");
      background-image: url("images/overlay.png"), linear-gradient(45deg, rgba(39, 161, 227, 0.65), rgba(231, 35, 42, 0.65)), url("../../images/banner.jpg");*/
    background-image: linear-gradient(to top, rgba(0,0,0,0.2) 33%, rgba(0,0,0,0.4) 66%, rgba(0,0,0,0.6) 100%), url("../../../images/airport.jpg");
    background-position: center center;
    background-size: auto;
    background-attachment: fixed;
    background-repeat: no-repeat;
    position: relative;
    height: 100vh;
  }

  .LearnButton {
    color: white;
    box-shadow: inset 0 0 0 2px white;
    
  }

.LearnButton:hover, 
.LearnButton:focus,
.LearnButton:focus-within{
  box-shadow: inset 0 0 0 2px red;
  color: red;
}

  .mywrapper {
    padding: 2.5em 1.2em 0.5em ;
}

  .content {
    padding: 4.5em 1.5em 2.5em 1.5em;
    }

  .content a {
    color: white;;
  }


.inner2 {
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  -moz-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center;
  margin: 0 auto;
  width: 100%;
  flex-direction: column;
}
/*
.cta > .inner > :first-child {
  padding-left: 0;
  width: 80%;
}*/

.Heading {
  text-align: center; 
  font-size: 2rem; 
  font-weight: bold;
  margin-bottom: 3em;
  letter-spacing: 2px;
  word-spacing: 3px;
  line-height: 2.5rem;
  padding: 0;
}

.about > ul.actions {
  justify-content: flex-end;
}

.actions {
  margin: 0;
  padding: 0;
}

.actions li {
  margin: auto;
  padding: 0;
}

.Covid {
  font-size: 1.5rem;
  letter-spacing: 0.5px;
}
header h2 + p {
  font-size: 1.3rem;
}


}

.cta {
  /*background-image:/* -moz-linear-gradient(top, rgba(21, 27, 33, 0.6), rgba(21, 27, 33, 0.6)), url("images/overlay.png"), * / -moz-linear-gradient(
      45deg,
      rgba(39, 161, 227, 0.65),
      rgba(231, 35, 42, 0.65)
    ),
    url("../../../images/cta.jpg");
  background-image: /*-webkit-linear-gradient(top, rgba(21, 27, 33, 0.6), rgba(21, 27, 33, 0.6)), url("images/overlay.png"),* / -webkit-linear-gradient(
      45deg,
      rgba(39, 161, 227, 0.65),
      rgba(231, 35, 42, 0.65)
    ),
    url("../../../images/cta.jpg");
  background-image:/* -ms-linear-gradient(top, rgba(21, 27, 33, 0.6), rgba(21, 27, 33, 0.6)), url("images/overlay.png"),* / -ms-linear-gradient(
      45deg,
      rgba(39, 161, 227, 0.65),
      rgba(231, 35, 42, 0.65)
    ),
    url("../../../images/cta.jpg");
  background-image: /* linear-gradient(top, rgba(21, 27, 33, 0.6), rgba(21, 27, 33, 0.6)), url("images/overlay.png"),* / linear-gradient(
      45deg,
      rgba(39, 161, 227, 0.65),
      rgba(231, 35, 42, 0.65)
    ),
    url("../../../images/cta.jpg");*/
  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.55) 33%, rgba(0, 0, 0, 0.45) 66%, rgba(0, 0, 0, 0.25) 100%),url('../../../images/airport5.jpg');
  background-position: center center;
  background-size: cover;
  background-attachment: fixed;
  background-repeat: no-repeat;
 /* background-color: rgba(21, 27, 33, 0.6);*/
  color: #ffffff;
  padding: 6rem 0;
}

.cta input,
.cta select,
.cta textarea {
  color: #ffffff;
}

.cta a {
  color: #ffffff;
  box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.7);
}

.cta strong,
.cta b {
  color: #ffffff;
}

.cta h1,
.cta h2,
.cta h3,
.cta h4,
.cta h5,
.cta h6 {
  color: #ffffff;
}

.cta h2 {
  letter-spacing: 2px;
  font-weight: bold;
  text-shadow: 2px 2px 3px black;
}

.cta p {
  font-weight: bold;
  text-shadow: 2px 2px 3px black;
}

.cta blockquote {
  border-left-color: #ffffff;
}

.cta code {
  background: rgba(255, 255, 255, 0.075);
  border-color: #ffffff;
}

.cta hr {
  border-bottom-color: #ffffff;
}

.cta input[type="submit"],
.cta input[type="reset"],
.cta input[type="button"],
.cta button,
.cta .button {
  background-color: transparent;
  box-shadow: inset 0 0 0 2px #ffffff;
  color: #ffffff !important;
  letter-spacing: 0.05em;
  text-transform: uppercase;
}

.cta input[type="submit"]:hover,
.cta input[type="reset"]:hover,
.cta input[type="button"]:hover,
.cta button:hover,
.cta .button:hover {
  background-color: rgba(255, 255, 255, 0.075);
}
/* ... */

